Created page with "Това е прост низ, който може да съдържа произволен текст и следователно може да се използва за документиране (описване с повече подробности) на създадения обект. * В [[Tree_View/bg|Преглед на свойствата]] редактирайте полето до иконата, под "Описание", като кликнете въ..."

--- a/wiki/bg/Object_name.html
+++ b/wiki/bg/Object_name.html
@@ -43,11 +43,11 @@
 <span class="o">&lt;&lt;</span><span class="n">Label</span> <span class="n">may</span> <span class="n">use</span> <span class="n">UTF8</span> <span class="n">characters</span><span class="o">&gt;&gt;.</span><span class="n">Width</span>
 </pre></div>
 <h3><span class="mw-headline" id="Label2">Label2</span></h3>
-<p>It is a simple string that can contain arbitrary text, and therefore can be used for documenting (describing with more detail) the created object.
+<p>&#1058;&#1086;&#1074;&#1072; &#1077; &#1087;&#1088;&#1086;&#1089;&#1090; &#1085;&#1080;&#1079;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072; &#1087;&#1088;&#1086;&#1080;&#1079;&#1074;&#1086;&#1083;&#1077;&#1085; &#1090;&#1077;&#1082;&#1089;&#1090; &#1080; &#1089;&#1083;&#1077;&#1076;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1085;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1079;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; (&#1086;&#1087;&#1080;&#1089;&#1074;&#1072;&#1085;&#1077; &#1089; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1087;&#1086;&#1076;&#1088;&#1086;&#1073;&#1085;&#1086;&#1089;&#1090;&#1080;) &#1085;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090;.
 </p>
-<ul><li>In the <a href="../Tree_View.html" title="Tree View">Tree View</a> edit the field next to the icon, under "Description", by clicking on it and pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (or rather <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Return</span> on macOS).</li>
-<li>You can also change this property by modifying the <code>Label2</code> attribute from the <a href="../Python_Console.html" title="Python Console">Python console</a>.</li>
-<li>The <span style="font-size:60%; padding-right:0.8em;">&#1044;&#1072;&#1085;&#1085;&#1080;</span><b>Label2</b> attribute is normally hidden in the <a href="../Property_View.html" title="Property View">Property View</a> but can be made visible by opening the context menu (right click) and selecting <b>Show hidden</b>.</li></ul>
+<ul><li>&#1042; <a href="../bg/Tree_View.html" title="Tree View/bg">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a> &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1081;&#1090;&#1077; &#1087;&#1086;&#1083;&#1077;&#1090;&#1086; &#1076;&#1086; &#1080;&#1082;&#1086;&#1085;&#1072;&#1090;&#1072;, &#1087;&#1086;&#1076; "&#1054;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1077;", &#1082;&#1072;&#1090;&#1086; &#1082;&#1083;&#1080;&#1082;&#1085;&#1077;&#1090;&#1077; &#1074;&#1098;&#1088;&#1093;&#1091; &#1085;&#1077;&#1075;&#1086; &#1080; &#1085;&#1072;&#1090;&#1080;&#1089;&#1085;&#1077;&#1090;&#1077; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (&#1080;&#1083;&#1080; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Return</span> &#1085;&#1072; macOS).</li>
+<li>&#1052;&#1086;&#1078;&#1077;&#1090;&#1077; &#1089;&#1098;&#1097;&#1086; &#1076;&#1072; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1080;&#1090;&#1077; &#1090;&#1086;&#1074;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086;, &#1082;&#1072;&#1090;&#1086; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1090;&#1077; &#1072;&#1090;&#1088;&#1080;&#1073;&#1091;&#1090;&#1072; <code>Label2</code> &#1086;&#1090; <a href="../Python_Console.html" title="Python Console">Python console</a>.</li>
+<li>&#1040;&#1090;&#1088;&#1080;&#1073;&#1091;&#1090;&#1098;&#1090; <span style="font-size:60%; padding-right:0.8em;">&#1044;&#1072;&#1085;&#1085;&#1080;</span><b>Label2</b> &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1077; &#1089;&#1082;&#1088;&#1080;&#1090; &#1074; <a href="../bg/Property_View.html" title="Property View/bg">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a>, &#1085;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1085;&#1072;&#1087;&#1088;&#1072;&#1074;&#1077;&#1085; &#1074;&#1080;&#1076;&#1080;&#1084; &#1095;&#1088;&#1077;&#1079; &#1086;&#1090;&#1074;&#1072;&#1088;&#1103;&#1085;&#1077; &#1085;&#1072; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; (&#1097;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085;) &#1080; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; <b>Show hidden</b>.</li></ul>
 <h2><span class="mw-headline" id="Scripting">Scripting</span></h2>
 <p>See also: <a href="../FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics">FreeCAD Scripting Basics</a>, and <a href="../Scripted_objects.html" title="Scripted objects">scripted objects</a>.
 </p><p>Any object in the software is internally created with the <code>addObject()</code> method of the document. The majority of 2D and 3D objects that the user will see in the <a href="../3D_View.html" title="3D View">3D View</a> are derived from a <a href="../Part_Feature.html" title="Part Feature">Part Feature</a>. In the following example, the object created is a <a href="../Part_Box.html" title="Part Box">Part Box</a>.
@@ -116,12 +116,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126103223
+Cached time: 20260126103518
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.201 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.155 seconds
 Preprocessor visited node count: 711/1000000
 Post&#8208;expand include size: 9291/2097152 bytes
 Template argument size: 3272/2097152 bytes
@@ -132,19 +132,19 @@ Unstrip post&#8208;expand size: 6904/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.077      1 -total
- 25.67%   12.343      5 Template:Code
- 16.23%    7.801      4 Template:KEY
- 14.14%    6.797      1 Template:Userdocnavi/bg
- 10.80%    5.192      3 Template:MenuCommand
-  9.63%    4.628      1 Template:PropertyData
-  9.41%    4.524     78 Template:Incode
-  7.00%    3.365      1 Template:Variable
-  4.15%    1.995      1 Template:Navigation_menu_2
-  2.25%    1.084      1 Template:TOCright
+100.00%   40.457      1 -total
+ 24.33%    9.845      1 Template:Userdocnavi/bg
+ 18.48%    7.478      1 Template:PropertyData
+ 13.73%    5.557     78 Template:Incode
+ 12.31%    4.981      1 Template:Navigation_menu_2
+ 11.15%    4.510      5 Template:Code
+  7.02%    2.839      1 Template:TOCright
+  6.70%    2.709      1 Template:Variable
+  5.58%    2.256      4 Template:KEY
+  5.33%    2.156      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126103223 and revision id 1744228. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126103517 and revision id 1744241. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
