--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -147,8 +147,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <ul><li>Fix: <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/pull/191">Diverse correzioni (PR#191)</a>, FreeCAD 0.19 non &egrave; pi&ugrave; supportato</li></ul>
 <p>0.8.0 / 2025-01-06: Grazie a farahats9 per il contributo
 </p>
-<ul><li>Nuovo: Mostra volume e superficie</li>
-<li>Nuovo: Calcola i momenti di inerzia</li>
+<ul><li>Novit&agrave;: Mostra volume e superficie</li>
+<li>Novit&agrave;: Calcola i momenti di inerzia</li>
 <li>Correzione: la macro ora funziona con l'esempio Assembly in FreeCAD 1.0</li>
 <li>Correzione: seleziona automaticamente il materiale per i solidi se &egrave; gi&agrave; assegnato dal nuovo sistema di materiali</li>
 <li>Modifiche minori all'interfaccia utente</li></ul>
@@ -160,8 +160,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <li>Correzione: icone modificate o mancanti, controlli di versione</li></ul>
 <p>0.7.3 / 2023-09-11:
 </p>
-<ul><li>Nuovo: aggiunti pulsanti per Copia negli appunti</li>
-<li>Nuovo: icona Scalable Vector Graphics</li>
+<ul><li>Novit&agrave;: aggiunti pulsanti per Copia negli appunti</li>
+<li>Novit&agrave;: icona Scalable Vector Graphics</li>
 <li>Correzione: compatibilit&agrave; per le versioni FreeCAD e web</li></ul>
 <p>0.7.0 / 2023-02-13:
 </p>
@@ -217,12 +217,12 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126103557
+Cached time: 20260126103623
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.085 seconds
+CPU time usage: 0.050 seconds
+Real time usage: 0.068 seconds
 Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
@@ -233,15 +233,15 @@ Unstrip post&#8208;expand size: 2557/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.522      1 -total
- 38.62%    5.995      1 Template:Macro/it
- 22.41%    3.479      1 Template:Codeextralink
- 20.84%    3.234      1 Template:ComboBox
-  9.36%    1.453      1 Template:FileName
-  6.53%    1.014      1 Template:MenuCommand
+100.00%   13.095      1 -total
+ 31.82%    4.167      1 Template:Macro/it
+ 18.69%    2.448      1 Template:Codeextralink
+ 16.52%    2.163      1 Template:ComboBox
+ 15.48%    2.027      1 Template:FileName
+ 14.31%    1.874      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103556 and revision id 1744243. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103623 and revision id 1744247. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
