Created page with "0.6.0 / 2022-08-27: * Novità: le masse sono modificabili (una funzionalità molto richiesta) * Novità: evidenzia il solido su cui si sta lavorando * Novità: nessuna voce duplicata quando contenitore e contenuto vengono selezionati contemporaneamente * Novità: i grafici a torta mostrano la relazione di densità nella casella combinata * Novità: leggibilità del testo sulla casella combinata colorata con conformità al contrasto WCAG21 1.4.6 (migliorato) * Correzione:..."

--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -170,17 +170,15 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <li>Novit&agrave;: la massa pu&ograve; essere impostata su zero per escludere i solidi dal calcolo e dalla visualizzazione</li>
 <li>Correzione: comportamento del valore predefinito spin e "Apply to all"</li>
 <li>Correzione: conserva il colore originale dei solidi quando si preme il pulsante "Nuovo"</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.6.0 / 2022-08-27:
 </p>
-<ul><li>New: Masses are editable (a highly requested feature)</li>
-<li>New: Highlights the solid you are working on</li>
-<li>New: No duplicate entries when container and content selected concurrently</li>
-<li>New: Pie charts show density relation in combo box</li>
-<li>New: Legibility of text on colored combo box with WCAG21 1.4.6 Contrast (Enhanced) conformity</li>
-<li>Fix: A Part used as a container for meshes (e.g. .stl's) is recognized correctly</li>
-<li>Fix: Fixes for error and language handling, material editing, combo box and GUI size adjustment</li></ul>
-</div>
+<ul><li>Novit&agrave;: le masse sono modificabili (una funzionalit&agrave; molto richiesta)</li>
+<li>Novit&agrave;: evidenzia il solido su cui si sta lavorando</li>
+<li>Novit&agrave;: nessuna voce duplicata quando contenitore e contenuto vengono selezionati contemporaneamente</li>
+<li>Novit&agrave;: i grafici a torta mostrano la relazione di densit&agrave; nella casella combinata</li>
+<li>Novit&agrave;: leggibilit&agrave; del testo sulla casella combinata colorata con conformit&agrave; al contrasto WCAG21 1.4.6 (migliorato)</li>
+<li>Correzione: una parte utilizzata come contenitore per mesh (ad esempio .stl) viene riconosciuta correttamente</li>
+<li>Correzione: correzioni per la gestione degli errori e della lingua, modifica del materiale, casella combinata e regolazione delle dimensioni dell'interfaccia utente grafica</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.5.8 / 2022-05-31:
 </p>
@@ -217,13 +215,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126103623
+Cached time: 20260126103812
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.050 seconds
-Real time usage: 0.068 seconds
-Preprocessor visited node count: 135/1000000
+Real time usage: 0.082 seconds
+Preprocessor visited node count: 134/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
@@ -233,15 +231,15 @@ Unstrip post&#8208;expand size: 2557/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.095      1 -total
- 31.82%    4.167      1 Template:Macro/it
- 18.69%    2.448      1 Template:Codeextralink
- 16.52%    2.163      1 Template:ComboBox
- 15.48%    2.027      1 Template:FileName
- 14.31%    1.874      1 Template:MenuCommand
+100.00%   11.275      1 -total
+ 36.37%    4.101      1 Template:Macro/it
+ 22.80%    2.571      1 Template:Codeextralink
+ 13.47%    1.519      1 Template:ComboBox
+ 12.37%    1.395      1 Template:FileName
+ 11.50%    1.297      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103623 and revision id 1744247. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103812 and revision id 1744249. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
