Created page with "0.5.8 / 2022-05-31: * Reinserito: Bounding Box * Novità: impostazione per colorare le sfere * Novità: impostazione per modificare le mappe dei colori * Interfaccia grafica riorganizzata: aggiunto calcolo aggiornamento, aggiunta densità totale * Correzione: le caselle di messaggio non potevano essere utilizzate quando FreeCAD non era in esecuzione sullo schermo principale in una configurazione multimonitor * Correzione: più di una mesh non è stata calcolata correttam..."

--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -179,16 +179,14 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <li>Novit&agrave;: leggibilit&agrave; del testo sulla casella combinata colorata con conformit&agrave; al contrasto WCAG21 1.4.6 (migliorato)</li>
 <li>Correzione: una parte utilizzata come contenitore per mesh (ad esempio .stl) viene riconosciuta correttamente</li>
 <li>Correzione: correzioni per la gestione degli errori e della lingua, modifica del materiale, casella combinata e regolazione delle dimensioni dell'interfaccia utente grafica</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.5.8 / 2022-05-31:
 </p>
-<ul><li>Reinserted: Bounding Box</li>
-<li>New: Setting to color spheres</li>
-<li>New: Setting to change color maps</li>
-<li>Rearranged GUI: Update calculation added, Total density added</li>
-<li>Fix: Message Boxes could not be used when not running FreeCAD on primary screen in a multimonitor setup</li>
-<li>Fix: More than one Mesh was not calculated correctly</li></ul>
-</div>
+<ul><li>Reinserito: Bounding Box</li>
+<li>Novit&agrave;: impostazione per colorare le sfere</li>
+<li>Novit&agrave;: impostazione per modificare le mappe dei colori</li>
+<li>Interfaccia grafica riorganizzata: aggiunto calcolo aggiornamento, aggiunta densit&agrave; totale</li>
+<li>Correzione: le caselle di messaggio non potevano essere utilizzate quando FreeCAD non era in esecuzione sullo schermo principale in una configurazione multimonitor</li>
+<li>Correzione: pi&ugrave; di una mesh non &egrave; stata calcolata correttamente</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.5.0 / 2022-04-07: complete rewrite by s-quirin (SyProLei project at Saarland University)
 </p>
@@ -215,13 +213,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126103812
+Cached time: 20260126104438
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.082 seconds
-Preprocessor visited node count: 134/1000000
+CPU time usage: 0.047 seconds
+Real time usage: 0.083 seconds
+Preprocessor visited node count: 133/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
@@ -231,15 +229,15 @@ Unstrip post&#8208;expand size: 2557/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.275      1 -total
- 36.37%    4.101      1 Template:Macro/it
- 22.80%    2.571      1 Template:Codeextralink
- 13.47%    1.519      1 Template:ComboBox
- 12.37%    1.395      1 Template:FileName
- 11.50%    1.297      1 Template:MenuCommand
+100.00%   16.058      1 -total
+ 26.89%    4.318      1 Template:Macro/it
+ 24.17%    3.881      1 Template:Codeextralink
+ 20.82%    3.344      1 Template:ComboBox
+ 15.11%    2.427      1 Template:MenuCommand
+ 10.44%    1.676      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103812 and revision id 1744249. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126104438 and revision id 1744253. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
