--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -207,19 +207,17 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <p>0.4.1 / 2019-05-25: Add default density button, sphere cursor, change window behavior, correct a container part issue.
 </p>
 </div>
-<div class="mw-translate-fuzzy">
-<p>0.1.2 / 2018-11-10:
+<p>0.1.2 / 2018-11-10: Versione iniziale di Chupins unita al repository ufficiale
 </p>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260126104438
+Cached time: 20260126104500
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.047 seconds
-Real time usage: 0.083 seconds
-Preprocessor visited node count: 133/1000000
+CPU time usage: 0.050 seconds
+Real time usage: 0.074 seconds
+Preprocessor visited node count: 132/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
@@ -229,15 +227,15 @@ Unstrip post&#8208;expand size: 2557/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.058      1 -total
- 26.89%    4.318      1 Template:Macro/it
- 24.17%    3.881      1 Template:Codeextralink
- 20.82%    3.344      1 Template:ComboBox
- 15.11%    2.427      1 Template:MenuCommand
- 10.44%    1.676      1 Template:FileName
+100.00%   12.098      1 -total
+ 27.27%    3.299      1 Template:Macro/it
+ 25.43%    3.076      1 Template:Codeextralink
+ 20.90%    2.528      1 Template:ComboBox
+ 12.08%    1.461      1 Template:MenuCommand
+ 11.62%    1.406      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126104438 and revision id 1744253. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126104459 and revision id 1744255. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
