--- a/wiki/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/FEM_ConstraintElectrostaticPotential.html
@@ -3,7 +3,7 @@
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--high" title="FEM Potentiel &eacute;lectrostatique (76% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="it/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM: Potenziale elettrostatico di vincolo (18% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--high" title="MES: Warunek brzegowy potencja&#322;u elektrostatycznego (76% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="pl/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--complete" title="MES: Warunek brzegowy potencja&#322;u elektrostatycznego (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de potencial eletrost&aacute;tico (18% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ru/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM &#1057;&#1086;&#1079;&#1076;&#1072;&#1090;&#1100; &#1101;&#1083;&#1077;&#1082;&#1090;&#1088;&#1086;&#1089;&#1090;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1081; &#1087;&#1086;&#1090;&#1077;&#1085;&#1094;&#1080;&#1072;&#1083; (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -97,7 +97,11 @@
 <li><b>x, y, z checkboxes</b>: To declare the corresponding magnetic flux density as unknown for the solver.</li></ul></li>
 <li><b>Capacitance Body</b>: Counter of the body (or face) with a capacitance.</li></ul>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
-<ul><li>Capacitance Body, Electric Infinity (<span style="font-size:small;color:green;">1.2 and above</span>: Far field), and Potential Constant are Elmer-specific features and won't work with CalculiX.</li></ul>
+<ul><li>The following are Elmer-specific features and won't work with CalculiX:
+<ul><li>Capacitance Body</li>
+<li>Electric Infinity (<span style="font-size:small;color:green;">1.2 and above</span>: Far field)</li>
+<li>Potential Constant</li>
+<li><span style="font-size:small;"><a href="Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span>: Magnetic Flux Density</li></ul></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -144,35 +148,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095051
+Cached time: 20260126104550
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.129 seconds
-Preprocessor visited node count: 469/1000000
-Post&#8208;expand include size: 24855/2097152 bytes
-Template argument size: 9922/2097152 bytes
+CPU time usage: 0.099 seconds
+Real time usage: 0.109 seconds
+Preprocessor visited node count: 475/1000000
+Post&#8208;expand include size: 24932/2097152 bytes
+Template argument size: 9928/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1814/5000000 bytes
+Unstrip post&#8208;expand size: 1819/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.317      1 -total
- 36.85%    8.224      1 Template:GuiCommandContainer
- 20.01%    4.466      1 Template:FEM_Tools_navi
- 19.98%    4.458      2 Template:Navigation_menu_2
- 18.84%    4.204      1 Template:GuiCommandFemInfo
- 12.61%    2.815      1 Template:Userdocnavi
-  9.28%    2.071      1 Template:GuiCommand
-  8.46%    1.887      2 Template:Docnav
-  6.90%    1.540      5 Template:VersionPlus
-  5.44%    1.214      1 Template:Caption
+100.00%   18.305      1 -total
+ 29.79%    5.453      1 Template:GuiCommandContainer
+ 21.22%    3.884      1 Template:FEM_Tools_navi
+ 20.64%    3.779      2 Template:Navigation_menu_2
+ 14.62%    2.676      1 Template:GuiCommandFemInfo
+ 11.83%    2.166      1 Template:Userdocnavi
+ 10.77%    1.972      2 Template:Docnav
+  9.24%    1.691      1 Template:GuiCommand
+  5.60%    1.025      8 Template:Version
+  5.27%    0.964      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260126095051 and revision id 1744134. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260126104630 and revision id 1744258. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
