Created page with "0.5.0 / 2022-04-07: riscrittura completa di s-quirin (progetto SyProLei presso l'Università del Saarland) * Novità: base di codice, requisito elevato a Qt5.12+ e Python3 (FreeCAD 0.19). * Novità: mostra la massa di ciascun solido. * Novità: finestra di avvio ancorata o mobile (può essere impostata nell'editor dei parametri). * Novità: la selezione corrisponde alla vista ad albero oppure è ordinata per nome (può essere impostata nell'editor dei parametri). * Novit..."

--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_CenterOfMass.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro CenterOfMass (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CenterOfMass (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--med" title="Macro CenterOfMass (27% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: &#346;rodek masy (4% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; CenterOfMass (23% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--high" title="&#51656;&#47049;&#51473;&#49900; &#47588;&#53356;&#47196; (85% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -187,52 +187,50 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <li>Interfaccia grafica riorganizzata: aggiunto calcolo aggiornamento, aggiunta densit&agrave; totale</li>
 <li>Correzione: le caselle di messaggio non potevano essere utilizzate quando FreeCAD non era in esecuzione sullo schermo principale in una configurazione multimonitor</li>
 <li>Correzione: pi&ugrave; di una mesh non &egrave; stata calcolata correttamente</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>0.5.0 / 2022-04-07: complete rewrite by s-quirin (SyProLei project at Saarland University)
+<p>0.5.0 / 2022-04-07: riscrittura completa di s-quirin (progetto SyProLei presso l'Universit&agrave; del Saarland)
 </p>
-<ul><li>New: Code base, Requirement raised to Qt5.12+ and Python3 (FreeCAD 0.19).</li>
-<li>New: Show mass of each solid.</li>
-<li>New: Start window docked or floating (can be set in Parameter Editor).</li>
-<li>New: Selection matches up tree view or is sorted by name (can be set in Parameter Editor).</li>
-<li>New: Option to save densities in document.</li>
-<li>Improved: FreeCAD alike Gui look and feel.</li>
-<li>Improved: Scaled color palette (from green to red) to colorify shapes.</li>
-<li>Improved: Visualising the displacement of centre of mass to the geometry.</li>
-<li>Improved: Internal tracking of units.</li>
-<li>Fix: Handling of groups and group objects.</li>
-<li>Fix: Handling of App::Link.</li>
-<li>Fix: Replaced deprecated Qt class.</li></ul>
-</div>
+<ul><li>Novit&agrave;: base di codice, requisito elevato a Qt5.12+ e Python3 (FreeCAD 0.19).</li>
+<li>Novit&agrave;: mostra la massa di ciascun solido.</li>
+<li>Novit&agrave;: finestra di avvio ancorata o mobile (pu&ograve; essere impostata nell'editor dei parametri).</li>
+<li>Novit&agrave;: la selezione corrisponde alla vista ad albero oppure &egrave; ordinata per nome (pu&ograve; essere impostata nell'editor dei parametri).</li>
+<li>Novit&agrave;: opzione per salvare le densit&agrave; nel documento.</li>
+<li>Miglioramento: aspetto e funzionalit&agrave; dell'interfaccia grafica simili a FreeCAD.</li>
+<li>Miglioramento: tavolozza dei colori ridimensionata (dal verde al rosso) per colorare le forme.</li>
+<li>Miglioramento: visualizzazione dello spostamento del centro di massa rispetto alla geometria.</li>
+<li>Miglioramento: tracciamento interno delle unit&agrave;.</li>
+<li>Correzione: gestione di gruppi e oggetti di gruppo.</li>
+<li>Correzione: gestione di App::Link.</li>
+<li>Correzione: sostituita la classe Qt obsoleta.</li></ul>
 <p>0.4.1 / 25/05/2019: Ultimo aggiornamento con vecchi requisiti e GUI disponibili nel repository ufficiale
 </p><p>0.1.2 / 2018-11-10: Versione iniziale di Chupins unita al repository ufficiale
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260126104515
+Cached time: 20260126104734
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.105 seconds
-Preprocessor visited node count: 131/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.072 seconds
+Preprocessor visited node count: 130/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2557/5000000 bytes
+Unstrip post&#8208;expand size: 2561/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.870      1 -total
- 26.55%    4.479      1 Template:Codeextralink
- 22.34%    3.769      1 Template:Macro/it
- 17.74%    2.992      1 Template:ComboBox
- 15.41%    2.599      1 Template:MenuCommand
- 15.32%    2.584      1 Template:FileName
+100.00%   10.902      1 -total
+ 30.76%    3.353      1 Template:Macro/it
+ 19.97%    2.177      1 Template:Codeextralink
+ 19.07%    2.079      1 Template:ComboBox
+ 16.63%    1.813      1 Template:FileName
+ 10.79%    1.176      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126104514 and revision id 1744257. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126104734 and revision id 1744262. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
