--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -60,7 +60,7 @@
 <ul><li><a href="../bg/Interface.html" title="Interface/bg">&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;</a>: &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1098;&#1090; &#1085;&#1072; FreeCAD &#1077; &#1089;&#1098;&#1089;&#1090;&#1072;&#1074;&#1077;&#1085; &#1086;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1085;&#1072; &#1077;&#1082;&#1088;&#1072;&#1085;&#1072;, &#1074;&#1082;&#1083;&#1102;&#1095;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; <a href="../bg/3D_View.html" title="3D View/bg">3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, <a href="../bg/Tree_View.html" title="Tree View/bg">&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1077;&#1085; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>,  <a href="../bg/Property_editor.html" class="mw-redirect" title="Property editor/bg">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a>,  <a href="../bg/Task_Panel.html" title="Task Panel/bg">&#1087;&#1072;&#1085;&#1077;&#1083; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080;</a>, &#1080; <a href="../bg/Python_Console.html" title="Python Console/bg">&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python</a>.</li>
 <li><a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1074;&#1080;&#1076;&#1086;&#1074;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1080;&#1083;&#1080; &#1090;&#1088;&#1072;&#1082;&#1087;&#1072;&#1076;&#1072; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;.</li>
 <li><a href="../bg/Selection_methods.html" title="Selection methods/bg">&#1052;&#1077;&#1090;&#1086;&#1076;&#1080; &#1079;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1084;&#1077;&#1090;&#1086;&#1076;&#1080; &#1079;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1089;&#1086;&#1092;&#1090;&#1091;&#1077;&#1088;&#1072;.</li>
-<li><a href="../bg/Object_name.html" title="Object name/bg">&#1048;&#1084;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;</a>: &#1054;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1074;&#1098;&#1074; FreeCAD &#1080;&#1084;&#1072;&#1090; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1086; &#1089;&#1072;&#1084;&#1086; &#1079;&#1072; &#1095;&#1077;&#1090;&#1077;&#1085;&#1077; &#1080;&#1084;&#1077;&#1085;&#1072; <code>Name</code> &#1082;&#1086;&#1080;&#1090;&#1086; &#1077;&#1076;&#1085;&#1086;&#1079;&#1085;&#1072;&#1095;&#1085;&#1086; &#1075;&#1080; &#1080;&#1076;&#1077;&#1085;&#1090;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1090;, &#1080; &#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080; <code>Label</code>, &#1082;&#1086;&#1080;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1090; &#1086;&#1090; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;.</li>
+<li><a href="../bg/Object_name.html" title="Object name/bg">&#1048;&#1084;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;</a>: &#1054;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1074;&#1098;&#1074; FreeCAD &#1080;&#1084;&#1072;&#1090; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1080; &#1089;&#1072;&#1084;&#1086; &#1079;&#1072; &#1095;&#1077;&#1090;&#1077;&#1085;&#1077; &#1080;&#1084;&#1077;&#1085;&#1072; <code>Name</code>, &#1082;&#1086;&#1080;&#1090;&#1086; &#1077;&#1076;&#1085;&#1086;&#1079;&#1085;&#1072;&#1095;&#1085;&#1086; &#1075;&#1080; &#1080;&#1076;&#1077;&#1085;&#1090;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1090; &#1080; &#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080; <code>Label</code>, &#1082;&#1086;&#1080;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1090; &#1086;&#1090; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;.</li>
 <li><a href="../bg/Preferences_Editor.html" title="Preferences Editor/bg">&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072;</a>: &#1077; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1074;&#1080; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1076;&#1072; &#1082;&#1086;&#1085;&#1090;&#1088;&#1086;&#1083;&#1080;&#1088;&#1072;&#1090;&#1077; &#1084;&#1085;&#1086;&#1075;&#1086; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1085;&#1072; &#1073;&#1072;&#1079;&#1086;&#1074;&#1072;&#1090;&#1072; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072; &#1080; &#1085;&#1072; &#1086;&#1090;&#1076;&#1077;&#1083;&#1085;&#1080;&#1090;&#1077; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;.</li>
 <li><a href="../Import_Export.html" title="Import Export">File formats</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1092;&#1072;&#1081;&#1083;&#1086;&#1074;&#1080; &#1092;&#1086;&#1088;&#1084;&#1072;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; FreeCAD &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1095;&#1077;&#1090;&#1077; &#1080; &#1079;&#1072;&#1087;&#1080;&#1089;&#1074;&#1072;.</li></ul>
 <p><span id="Workbenches"></span>
@@ -136,12 +136,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126104634
+Cached time: 20260126105146
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.117 seconds
-Real time usage: 0.374 seconds
+CPU time usage: 0.112 seconds
+Real time usage: 0.175 seconds
 Preprocessor visited node count: 293/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -152,17 +152,17 @@ Unstrip post&#8208;expand size: 4280/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.682      1 -total
- 51.54%   17.875      1 Template:Userdocnavi/bg
- 25.64%    8.892      1 Template:Navigation_menu_2
-  9.00%    3.123      7 Template:Incode
-  8.62%    2.988      1 Template:TOCright
-  8.26%    2.864      1 Template:Button
-  8.23%    2.854      2 Template:VersionMinus
-  8.15%    2.826      3 Template:Version
+100.00%   16.312      1 -total
+ 36.12%    5.892      1 Template:Userdocnavi/bg
+ 15.91%    2.596      3 Template:Version
+ 15.01%    2.448      1 Template:Navigation_menu_2
+ 13.09%    2.135      1 Template:TOCright
+ 11.86%    1.934      7 Template:Incode
+  8.90%    1.452      2 Template:VersionMinus
+  7.59%    1.239      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260126104634 and revision id 1744260. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260126105146 and revision id 1744264. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
