--- a/wiki/it/Macros_recipes.html
+++ b/wiki/it/Macros_recipes.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macros recipes/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macros+recipes&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--high" title="Makrorezepte (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrorezepte (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macros_recipes.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macros recipes (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Macros recipes (1% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--complete" title="Liste des macros (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -23,9 +23,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Align_Face_Object_to_View.png&amp;filetimestamp=20190608114445&amp;.html" class="mw-file-description"><img src="../File/Macro_Align_Face_Object_to_View.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Align_Face_Object_to_View.html" title="Macro Align Face Object to View/it">Macro Align Face Object to View</a></span>: Questa macro allinea la vista corrente a una faccia selezionata.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Align_View_to_Face.png&amp;filetimestamp=20190607194033&amp;.html" class="mw-file-description"><img src="../File/Macro_Align_View_to_Face.png" decoding="async" width="24" height="20" class="mw-file-element" data-file-width="58" data-file-height="49"></a></span> <a href="../it/Macro_Align_View_to_Face.html" title="Macro Align View to Face/it">Macro Align View to Face</a></span>: Questa macro allinea la vista corrente a una faccia selezionata.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Copy3DViewToClipboard.png&amp;filetimestamp=20160914184618&amp;.html" class="mw-file-description"><img src="../File/Macro_Copy3DViewToClipboard.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Copy3DViewToClipboard.html" title="Macro Copy3DViewToClipboard/it">Macro Copy3DViewToClipboard</a></span>: Copia negli appunti il &#8203;&#8203;contenuto di 3DView ridimensionato a 640, 480 px.</li></ul>
-<div class="mw-translate-fuzzy">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCCamera_00.png&amp;filetimestamp=20150126142640&amp;.html" class="mw-file-description"><img src="../File/FCCamera_00.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_FCCamera.html" title="Macro FCCamera/it">Macro FCCamera</a></span>: Questa macro pu&ograve; ruotare lo schermo di un angolo definito e rispetto ad un asse definito in modo da creare un piano su cui affacciare lo schermo e creare una forma nel piano specificato posizionando la faccia selezionata di fronte allo schermo, e rilevare la posizione della telecamera.</li></ul>
-</div>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Mouse_Cross.png&amp;filetimestamp=20190609105538&amp;.html" class="mw-file-description"><img src="../File/Macro_Mouse_Cross.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Mouse_Cross.html" title="Macro Mouse Cross/it">Macro Mouse Cross</a></span>: Questa piccola macro trasforma la freccia del mouse in una croce di precisione.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Rotate_View_view_90_Degrees.png&amp;filetimestamp=20190612132832&amp;.html" class="mw-file-description"><img src="../File/Macro_Rotate_View_view_90_Degrees.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Rotate_View.html" title="Macro Rotate View/it">Macro Rotate View</a></span>: Questa macro ruota la vista corrente di 90&deg; a sinistra. Funziona solo se si &egrave; nella visualizzazione <span typeof="mw:File"><a href="../Std_ViewTop.html" title="Std_ViewTop"><img alt="Std_ViewTop" src="../File/View-top.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Std_ViewTop.html" title="Std ViewTop/it">XY (in alto)</a>.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Text_console_python.png&amp;filetimestamp=20190607121346&amp;.html" class="mw-file-description"><img src="../File/Text_console_python.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Rotate_View_Free.html" title="Macro Rotate View Free/it">Macro Rotate View Free</a></span>: Questa macro viene utilizzata nella console Python e ruota la vista corrente nell'angolo e nel piano indicati.</li></ul>
@@ -884,30 +882,30 @@
 <li>Nella scheda <b>Barra degli strumenti</b>, creare una nuova barra degli strumenti e aggiungere la macro, prendendola dalla categoria <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113123915
+Cached time: 20260126105926
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.495 seconds
-Real time usage: 0.886 seconds
-Preprocessor visited node count: 3091/1000000
+CPU time usage: 0.556 seconds
+Real time usage: 0.673 seconds
+Preprocessor visited node count: 3090/1000000
 Post&#8208;expand include size: 27106/2097152 bytes
 Template argument size: 14484/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1947/5000000 bytes
+Unstrip post&#8208;expand size: 1952/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.708      1 -total
- 40.60%   11.656    219 Template:MacroLink
-  8.69%    2.494      3 Template:Button
-  7.97%    2.288      6 Template:MenuCommand
-  6.02%    1.727      1 Template:TOCright
+100.00%   32.006      1 -total
+ 40.17%   12.856    219 Template:MacroLink
+ 10.42%    3.335      6 Template:MenuCommand
+  7.76%    2.483      1 Template:TOCright
+  6.58%    2.107      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260113123914 and revision id 1737840. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126105926 and revision id 1744268. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
