Updated page FEM ConstraintElectrostaticPotential/fr

--- a/wiki/fr/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/fr/FEM_ConstraintElectrostaticPotential.html
@@ -88,19 +88,18 @@
 <p>La fen&ecirc;tre de dialogue propose les param&egrave;tres suivants&nbsp;:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FEM_ElectrostaticPotential_dialog.png&amp;filetimestamp=20260125143029&amp;.html" class="mw-file-description"><img src="../File/FEM_ElectrostaticPotential_dialog.png" decoding="async" width="489" height="616" class="mw-file-element" data-file-width="489" data-file-height="616"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><b>Condition aux limites</b>&nbsp;: permet de choisir entre le type de condition aux limites de Dirichlet (potentiel prescrit) et de Neumann (densit&eacute; de flux &eacute;lectrique pr&eacute;vue). <span style="font-size:small;"><a href="../fr/Release_notes_1.1.html" title="Release notes 1.1/fr">introduit dans la version 1.1</a></span></li>
-<li><b>Potentiel</b>&nbsp;: potentiel &eacute;lectrique en V.</li>
-<li><b>Potentiel &eacute;lectromagn&eacute;tique</b>&nbsp;: permet la saisie des composantes d'un champ de vecteurs potentiels.</li>
-<li><b>x</b>&nbsp;: partie r&eacute;elle/imaginaire du potentiel dans la direction des x en V.<br>Pour les syst&egrave;mes de coordonn&eacute;es autres que cart&eacute;sien 3D, ce sera la premi&egrave;re coordonn&eacute;e du syst&egrave;me au lieu de x.</li>
-<li><b>y</b>&nbsp;: partie r&eacute;elle/imaginaire du potentiel dans la direction des y dans V.<br>Pour les syst&egrave;mes de coordonn&eacute;es autres que cart&eacute;sien 3D, ce sera la deuxi&egrave;me coordonn&eacute;e du syst&egrave;me au lieu de y.</li>
-<li><b>z</b>&nbsp;: partie r&eacute;elle/imaginaire du potentiel dans la direction des z dans V.<br>Pour les syst&egrave;mes de coordonn&eacute;es autres que cart&eacute;sien 3D, ce sera la troisi&egrave;me coordonn&eacute;e du syst&egrave;me au lieu de z. Si le syst&egrave;me de coordonn&eacute;es n'a pas de troisi&egrave;me coordonn&eacute;e, ce param&egrave;tre sera ignor&eacute;.</li>
-<li><b>Cases &agrave; cocher x, y, z</b>&nbsp;: pour d&eacute;clarer le potentiel correspondant comme inconnu au solveur.</li>
-<li><b>Infinit&eacute; &eacute;lectrique</b>&nbsp;: option pour faire l'approximation sph&eacute;rique en sorte que le volume au-dessus de la face s'&eacute;tend &agrave; l'infini.</li>
+<ul><li><b>Condition aux limites</b>&nbsp;: permet de choisir entre le type de condition aux limites Dirichlet (potentiel prescrit) et Neumann (densit&eacute; de flux &eacute;lectrique prescrite). <span style="font-size:small;"><a href="../fr/Release_notes_1.1.html" title="Release notes 1.1/fr">introduit dans la version 1.1</a></span></li>
+<li><b>Potentiel</b>  Le potentiel &eacute;lectrique en V.</li>
+<li><b>Potentiel &eacute;lectromagn&eacute;tique</b>&nbsp;: permet la saisie des composantes d'un champ vectoriel de potentiel.
+<ul><li><b>x/y/z</b>&nbsp;: partie r&eacute;elle/imaginaire du potentiel dans la direction x, y ou z en V. Pour les syst&egrave;mes de coordonn&eacute;es autres que le syst&egrave;me cart&eacute;sien 3D, il s'agira de la premi&egrave;re, deuxi&egrave;me ou troisi&egrave;me coordonn&eacute;e du syst&egrave;me au lieu de x, y ou z. Si le syst&egrave;me de coordonn&eacute;es n'a pas de troisi&egrave;me coordonn&eacute;e, z sera ignor&eacute;.</li>
+<li><b>Cases &agrave; cocher x, y, z</b>&nbsp;: pour d&eacute;clarer le potentiel correspondant comme inconnu pour le solveur.</li></ul></li>
+<li><b>Infini &eacute;lectrique</b> (<span style="font-size:small;color:green;">version 1.2 et suivantes</span>: <b>Champ lointain</b>)&nbsp;: option permettant de faire une approximation sph&eacute;rique selon laquelle le volume au-dessus de la face s'&eacute;tend &agrave; l'infini.</li>
 <li><b>Potentiel constant</b>&nbsp;: option permettant de d&eacute;finir un potentiel constant.</li>
 <li><b>Densit&eacute; de flux &eacute;lectrique</b>&nbsp;: densit&eacute; de flux &eacute;lectrique (champ de d&eacute;placement &eacute;lectrique <i>D</i>) en C/m^2. <span style="font-size:small;"><a href="../fr/Release_notes_1.1.html" title="Release notes 1.1/fr">introduit dans la version 1.1</a></span></li>
+<li><b>Densit&eacute; de flux magnetique</b>&nbsp;: permet de saisir les composantes d'une densit&eacute; de flux magn&eacute;tique en mT. <span style="font-size:small;"><a href="../fr/Release_notes_1.2.html" title="Release notes 1.2/fr">introduit dans la version 1.2</a></span>
+<ul><li><b>x/y/z</b>&nbsp;: partie r&eacute;elle/imaginaire de la densit&eacute; de flux magn&eacute;tique dans les directions x, y ou z en mT. Pour les syst&egrave;mes de coordonn&eacute;es autres que le syst&egrave;me cart&eacute;sien 3D, il s'agira de la premi&egrave;re, deuxi&egrave;me ou troisi&egrave;me coordonn&eacute;e du syst&egrave;me au lieu de x, y ou z. Si le syst&egrave;me de coordonn&eacute;es n'a pas de troisi&egrave;me coordonn&eacute;e, z sera ignor&eacute;.</li>
+<li><b>Cases &agrave; cocher x, y, z</b>&nbsp;: pour d&eacute;clarer la densit&eacute; de flux magn&eacute;tique correspondante comme inconnue pour le solveur.</li></ul></li>
 <li><b>Corps capacitif</b>&nbsp;: nombre de corps (ou de faces) avec une capacit&eacute;.</li></ul>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -153,15 +152,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126111117
+Cached time: 20260126112403
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.131 seconds
-Preprocessor visited node count: 445/1000000
-Post&#8208;expand include size: 27039/2097152 bytes
-Template argument size: 10924/2097152 bytes
+CPU time usage: 0.102 seconds
+Real time usage: 0.143 seconds
+Preprocessor visited node count: 459/1000000
+Post&#8208;expand include size: 27205/2097152 bytes
+Template argument size: 10933/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -169,19 +168,19 @@ Unstrip post&#8208;expand size: 1823/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.598      1 -total
- 28.14%    9.454      1 Template:GuiCommandContainer
- 23.42%    7.869      1 Template:FEM_Tools_navi/fr
- 18.31%    6.153      2 Template:Navigation_menu_2
- 15.50%    5.209      1 Template:GuiCommandFemInfo/fr
- 14.38%    4.830      1 Template:Userdocnavi/fr
-  8.46%    2.844      2 Template:Docnav/fr
-  7.63%    2.562      1 Template:GuiCommand/fr
-  6.63%    2.229      6 Template:Version/fr
-  6.31%    2.121      1 Template:Caption
+100.00%   36.405      1 -total
+ 36.92%   13.440      1 Template:GuiCommandContainer
+ 20.10%    7.319      1 Template:FEM_Tools_navi/fr
+ 18.07%    6.579      1 Template:GuiCommandFemInfo/fr
+ 14.15%    5.151      2 Template:Navigation_menu_2
+ 13.26%    4.829      1 Template:GuiCommand/fr
+ 12.10%    4.404      1 Template:Userdocnavi/fr
+  8.09%    2.944      2 Template:Docnav/fr
+  5.63%    2.049      4 Template:VersionPlus/fr
+  5.09%    1.854      7 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:140147-0!canonical and timestamp 20260126111117 and revision id 1744276. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:140147-0!canonical and timestamp 20260126112403 and revision id 1744278. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
