Updated page FEM ConstraintElectrostaticPotential/fr

--- a/wiki/fr/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/fr/FEM_ConstraintElectrostaticPotential.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">FEM ConstraintElectrostaticPotential/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-FEM+ConstraintElectrostaticPotential&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--high" title="FEM RandbedingungElektrostatischesPotential (76% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FEM_ConstraintElectrostaticPotential.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FEM ConstraintElectrostaticPotential (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM: Potenziale elettrostatico di vincolo (18% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--complete" title="MES: Warunek brzegowy potencja&#322;u elektrostatycznego (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de potencial eletrost&aacute;tico (18% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
@@ -103,9 +103,7 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>La capacit&eacute;, l'infini &eacute;lectrique et la constante de potentiel sont des fonctions sp&eacute;cifiques &agrave; Elmer et ne fonctionneront pas avec CalculiX.</li></ul>
-</div>
+<ul><li>La capacit&eacute;, l'infini &eacute;lectrique (<span style="font-size:small;color:green;">version 1.2 et suivantes</span>: champ lointain) et la constante de potentiel sont des fonctions sp&eacute;cifiques &agrave; Elmer et ne fonctionneront pas avec CalculiX.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -152,35 +150,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126112403
+Cached time: 20260126112455
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.143 seconds
-Preprocessor visited node count: 459/1000000
-Post&#8208;expand include size: 27205/2097152 bytes
-Template argument size: 10933/2097152 bytes
+CPU time usage: 0.090 seconds
+Real time usage: 0.132 seconds
+Preprocessor visited node count: 463/1000000
+Post&#8208;expand include size: 27279/2097152 bytes
+Template argument size: 10936/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1823/5000000 bytes
+Unstrip post&#8208;expand size: 1827/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.405      1 -total
- 36.92%   13.440      1 Template:GuiCommandContainer
- 20.10%    7.319      1 Template:FEM_Tools_navi/fr
- 18.07%    6.579      1 Template:GuiCommandFemInfo/fr
- 14.15%    5.151      2 Template:Navigation_menu_2
- 13.26%    4.829      1 Template:GuiCommand/fr
- 12.10%    4.404      1 Template:Userdocnavi/fr
-  8.09%    2.944      2 Template:Docnav/fr
-  5.63%    2.049      4 Template:VersionPlus/fr
-  5.09%    1.854      7 Template:Version/fr
+100.00%   32.933      1 -total
+ 31.19%   10.272      1 Template:GuiCommandContainer
+ 25.61%    8.433      1 Template:FEM_Tools_navi/fr
+ 17.63%    5.806      2 Template:Navigation_menu_2
+ 15.49%    5.102      1 Template:GuiCommandFemInfo/fr
+ 13.15%    4.330      1 Template:Userdocnavi/fr
+  9.94%    3.275      2 Template:Docnav/fr
+  7.96%    2.623      1 Template:GuiCommand/fr
+  4.62%    1.521      1 Template:VersionMinus/fr
+  4.56%    1.502      7 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:140147-0!canonical and timestamp 20260126112403 and revision id 1744278. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:140147-0!canonical and timestamp 20260126112454 and revision id 1744280. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
